--- a/requirements.txt
+++ b/requirements.txt
@@ -69,8 +69,8 @@ pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.4
-pywin32==304
-pywinpty==2.0.5
+# pywin32==304
+# pywinpty==2.0.5
 pyzmq==23.2.0
 QtPy==2.1.0
 requests==2.27.1
