--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ saved_results/Tests/LFW/*
 !saved_results/Tests/LFW/ROC_zoom.png
 !saved_results/Tests/LFW/ROC_results.xlsx
 
-saved_results/Tests/UPM-GTI-Face/*
-!saved_results/Tests/UPM-GTI-Face/AUC Curves.xlsx
-!saved_results/Tests/UPM-GTI-Face/AUC_FC.png
-!saved_results/Tests/UPM-GTI-Face/AUC_FC_zoom.png
+saved_results/Tests/UPM-GTI-Face/Mask/*
+!saved_results/Tests/UPM-GTI-Face/Mask/AUC Curves.xlsx
+!saved_results/Tests/UPM-GTI-Face/Mask/AUC paper.png
+
+saved_results/Tests/UPM-GTI-Face/No Mask/*
+!saved_results/Tests/UPM-GTI-Face/No Mask/AUC Curves.xlsx
+!saved_results/Tests/UPM-GTI-Face/No Mask/AUC paper.png
