Add experiment directories to .gitignore
Add directories of future experiments to .gitignore so they do not
come up in the git status of future experiment branches

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ saved_results/Tests/UPM-GTI-Face/Mask/*
 saved_results/Tests/UPM-GTI-Face/No Mask/*
 !saved_results/Tests/UPM-GTI-Face/No Mask/AUC Curves.xlsx
 !saved_results/Tests/UPM-GTI-Face/No Mask/AUC paper.png
+
+saved_results/Tests/RealWorldOccludedFaces/*
+!saved_results/Tests/RealWorldOccludedFaces/Histogram.png
+
+saved_results/Tests/SCface/*
